tests/invalid/Void_Invalid_2.whiley
import * from whiley.lang.*

function f(int x, void z) -> void:
    return
